<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_main"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp">

                <ImageView
                    android:id="@+id/img_icon"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:contentDescription="icon"
                    android:scaleType="centerCrop"
                    app:srcCompat="@mipmap/ic_launcher" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/img_icon"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/tv_item_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="@string/camera_name" />

                    <TextView
                        android:id="@+id/tv_item_jenis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="35dp"
                        android:textSize="14sp"
                        tools:text="@string/camera_jenis" />

                    <TextView
                        android:id="@+id/tv_item_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="8dp"
                        android:textSize="14sp"
                        tools:text="@string/camera_price" />

                </RelativeLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="@string/tv_spesifikasi">

        </TextView>

        <TextView
            android:id="@+id/tv_item_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:lineSpacingMultiplier="1"
            android:text="@string/camera_detail" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:background="@color/colorPrimary"
        android:text="@string/btn_pembelian"
        android:textColor="@android:color/white" />

</RelativeLayout>